Make dark mode available in web mode. Fix redirects. Change some things in mobile view.

--- a/styles/body.css
+++ b/styles/body.css
@@ -20,6 +20,5 @@
 }
 
 .page-body div {
-  font-size: 20px;
   color: var(--color-white);
 }
