--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -21,7 +21,7 @@
   width: 100%;
 }
 
-.contact-us form [name='email']:in {
+.contact-us form [name='email']:invalid {
   border-color: var(--color-red);
 }
 
@@ -50,4 +50,18 @@
 .contact-us form [name='message']:focus,
 .contact-us form button:active {
   background-color: var(--color-light-orange);
+}
+
+@media (max-width: 1100px) {
+  .contact-us {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-us-text {
+    max-width: 70%;
+    margin-left: 0;
+  }
+  .contact-us-form {
+    max-width: 70%;
+  }
 }
