--- a/styles/footer.css
+++ b/styles/footer.css
@@ -9,6 +9,14 @@
   width: 100%;
 }
 
+@media (max-width: 1100px) {
+  .footer {
+    justify-content: space-between;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+}
+
 .footer .image {
   display: flex;
   flex-direction: column;
