--- a/styles/general.css
+++ b/styles/general.css
@@ -1,8 +1,8 @@
 html {
   scroll-behavior: smooth;
-  zoom: 150%;
   scroll-padding-top: 20%;
   font-family: Roboto, Arial;
+  font-size: var(--default-font-size);
   color: var(--color-black);
 }
 
@@ -13,6 +13,11 @@ body {
   justify-content: center;
   margin: 0;
   padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.body {
   background-color: var(--color-white);
 }
 
@@ -21,19 +26,80 @@ body {
   --color-strong-orange: rgb(255, 117, 24);
   --color-menu: rgba(200, 200, 200, 0.15);
   --color-menu-mobile: rgba(200, 200, 200, 0.85);
-  --color-white: white;
-  --color-black: black;
+  --color-white: rgb(250, 250, 250);
+  --color-black: rgb(5, 5, 5);
+  --color-red: rgb(240, 0, 0);
+  --menu-text-size: 25px;
+  --bigger-text-size: 30px;
+  --default-font-size: 25px;
+}
+
+#checkbox {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 59%;
+  cursor: pointer;
+  outline: none;
+  z-index: 110;
+}
+
+.moon,
+.sun {
+  z-index: 109;
+  position: fixed;
+  top: 1.1rem;
+  right: 1.1rem;
+  width: 1rem;
+  height: 1rem;
+  transition: 0.15s linear;
+}
+
+.sun {
+  display: none;
+}
+
+.moon {
+  display: flex;
+}
+
+#checkbox:checked + .body .right-section .sun {
+  display: flex;
+}
+
+#checkbox:checked + .body .right-section .moon {
+  display: none;
+}
+
+#checkbox:checked + .body {
+  background-color: var(--color-white);
+  --color-light-orange: rgb(128, 32, 14);
+  --color-strong-orange: rgb(255, 117, 24);
+  --color-menu: rgba(100, 100, 100, 0.65);
+  --color-menu-mobile: rgba(200, 200, 200, 0.85);
+  --color-white: rgb(50, 50, 50);
+  --color-black: rgb(200, 200, 200);
   --color-red: red;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (max-width: 1100px) {
   :root {
-    --color-light-orange: rgb(128, 32, 14);
-    --color-strong-orange: rgb(128, 32, 14);
-    --color-menu: rgba(200, 200, 200, 0.65);
-    --color-menu-mobile: rgba(200, 200, 200, 0.85);
-    --color-white: black;
-    --color-black: white;
-    --color-red: red;
+    --menu-text-size: 100px;
+    --bigger-text-size: 50px;
+    --default-font-size: 40px;
   }
-} */
+  body {
+    width: 100%;
+  }
+  #checkbox,
+  .moon,
+  .sun {
+    display: none;
+  }
+}
