--- a/styles/header.css
+++ b/styles/header.css
@@ -34,7 +34,7 @@
 }
 
 .left-section div {
-  font-size: 20px;
+  font-size: var(--default-text-size);
   color: var(--color-strong-orange);
   padding-left: 10%;
   white-space: nowrap;
@@ -73,7 +73,7 @@
   width: 0%;
   height: 2px;
   background: var(--color-strong-orange);
-  top: 150%;
+  top: 120%;
   position: absolute;
   transition: 0.5s;
 }
@@ -83,7 +83,7 @@
 }
 
 .web-menu ul li a {
-  font-size: 15px;
+  font-size: var(--menu-text-size);
   color: var(--color-strong-orange);
   width: 100%;
   height: 100%;
@@ -97,15 +97,8 @@
 
 .mobile-menu {
   display: none;
-}
-
-@media (max-width: 1100px) {
-  .web-menu {
-    display: none;
-  }
-  .mobile-menu {
-    display: flex;
-  }
+  justify-content: center;
+  align-items: center;
 }
 
 .hamburger {
@@ -115,11 +108,11 @@
   color: var(--color-black);
   border: none;
   cursor: pointer;
-  top: 1rem;
-  right: 1rem;
+  transform: scale(5);
 }
 
 .menu {
+  padding-top: 10%;
   position: fixed;
   z-index: 100;
   top: 0;
@@ -127,7 +120,7 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   list-style: none;
   background-color: var(--color-menu-mobile);
   backdrop-filter: blur(5px);
@@ -153,14 +146,24 @@
 
 .menu li {
   width: 80%;
-  padding: 5%;
+  padding: 15%;
+  padding-left: 5%;
 }
 
 .menu li a {
-  font-size: 100px;
+  font-size: var(--menu-text-size);
   width: 100%;
   height: 100%;
   cursor: pointer;
   text-decoration: none;
   position: absolute;
+}
+
+@media (max-width: 1100px) {
+  .web-menu {
+    display: none;
+  }
+  .mobile-menu {
+    display: flex;
+  }
 }
